--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-# cache files
+# Cache files
 *cache*
 
-# Vs Code Settings
-*code*
+# Project notes
+*note*
 
 # Virtual Environment
 *env*
+
+# Vs Code Settings
+*code*
