update ReadMe, change requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,58 @@
-cs50
-Flask
-Flask-Session
-requests
+astroid==3.0.2
+attrs==20.3.0
+autopep8==2.0.4
+beautifulsoup4==4.12.2
+black==23.12.1
+blinker==1.7.0
+cachelib==0.10.2
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+check50==3.3.11
+click==8.1.7
+cryptography==41.0.7
+cs50==9.3.4
+dill==0.3.7
+EditorConfig==0.12.3
+Flask==3.0.0
+Flask-Session==0.5.0
+greenlet==3.0.3
+icdiff==2.0.7
+idna==3.6
+iniconfig==2.0.0
+isort==5.13.2
+itsdangerous==2.1.2
+jellyfish==0.11.2
+Jinja2==3.1.3
+jsbeautifier==1.14.11
+lib50==3.0.10
+MarkupSafe==2.1.3
+mccabe==0.7.0
+mypy==1.8.0
+mypy-extensions==1.0.0
+packaging==23.2
+pathspec==0.12.1
+pexpect==4.9.0
+platformdirs==4.1.0
+pluggy==1.3.0
+ptyprocess==0.7.0
+pycodestyle==2.10.0
+pycparser==2.21
+pylint==3.0.3
+pytest==7.4.4
+python-magic==0.4.27
+pytz==2023.3.post1
+PyYAML==6.0.1
+requests==2.31.0
+setuptools==69.0.3
+six==1.16.0
+soupsieve==2.5
+SQLAlchemy==2.0.25
+sqlparse==0.4.4
+style50==2.10.1
+termcolor==1.1.0
+tomlkit==0.12.3
+typing_extensions==4.9.0
+urllib3==2.1.0
+Werkzeug==3.0.1
+wheel==0.42.0
