--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ dill==0.3.7
 EditorConfig==0.12.3
 Flask==3.0.0
 Flask-Session==0.5.0
+Flask-SQLAlchemy==3.1.1
 greenlet==3.0.3
+gunicorn==21.2.0
 icdiff==2.0.7
 idna==3.6
 iniconfig==2.0.0
