--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "watch": "npx tailwindcss -i ./assets/css/index.css -o ./assets/css/output.css --watch"
   },
   "devDependencies": {
+    "daisyui": "^4.6.0",
     "tailwindcss": "^3.4.1"
   }
 }
