--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "watch": "npx tailwindcss -i ./assets/css/index.css -o ./assets/css/output.css --watch"
+    "watch": "npx tailwindcss -i ./assets/css/index.css -o ./assets/css/output.css --watch",
+    "build": "npx tailwindcss -o ./assets/css/build.css --minify"
   },
   "devDependencies": {
     "daisyui": "^4.6.0",
